# Epub-Tools

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  epub_editor.py  generate.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
core/: content_manager.py  epub_loader.py  replace_engine.py  search_engine.py
navigation_system/: breadcrumb_manager.py  input_handler.py  screen_manager.py
screens/: base_screen.py  batch_operations.py  dashboard.py  file_manager.py  replace.py  search_results.py
src/epub_editor_pro/: __main__.py  app.py
src/epub_editor_pro/core/: epub_saver.py
src/epub_editor_pro/navigation_system/: breadcrumb_manager.py  input_handler.py  screen_manager.py
src/epub_editor_pro/screens/: batch_operations.py  search.py
tools/: Grapher.py
ui/: color_manager.py  layout_manager.py  material_components.py
